# LAAFE

./: .gitignore  LICENSE  README.md  cfg_example.yaml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
cfg/: cfg_example.yaml
cfg/initial_advice/: initial_advice.yaml
cfg/llm_template/: dataset_advice.yaml  llm_template.yaml
generated_code/: test.py
notebooks/: request_test.ipynb  sklearn_dataset_test.ipynb
optimization/: __init__.py  main.py  run_experiment.py
optimization/data_operations/: __init__.py  dataset_loaders.py  operation_aliases.py  operation_pipeline.py
optimization/experiments/: feature_generation.py
optimization/llm/: gpt.py  groq_api.py  llm_templates.py
optimization/models/: model_training.py
optimization/optimizers/: assumption_optimizer.py  base.py  feature_optimizer.py
optimization/utils/: function_tools.py  visualisation.py
src/api/: chatgpt.py
src/optimization/: __init__.py  cfg.yaml  run_experiment.py
src/optimization/data_operations/: __init__.py  dataset_loaders.py  operation_aliases.py  operation_pipeline.py
src/optimization/llm/: gpt.py  llm_templates.py
src/optimization/models/: model_training.py
src/optimization/optimizers/: assumption_optimizer.py  base.py  feature_optimizer.py  optimizer.py
src/optimization/utils/: visualisation.py
